--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   
 
-  <footer class="page-footer orange">
+ <!-- <footer class="page-footer orange">
     <div class="container">
     </div>
     <div class="footer-copyright">
@@ -43,7 +43,7 @@
     </div>
   </footer>
 
-
+-->
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
