--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <nav class="light-blue lighten-1" role="navigation">
             <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Fernweh</a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#">Navbar Link</a></li>
+                    <li><a href="#">About</a></li>
                 </ul>
 
                 <ul id="nav-mobile" class="side-nav">
-                    <li><a href="#">Navbar Link</a></li>
+                    <li><a href="#">About</a></li>
                 </ul>
                 <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
             </div>
@@ -27,28 +27,49 @@
         <div class="slider">
             <ul class="slides">
                 <li>
-                    <img src="img/1.jpg"> <!-- random image -->
+                    <img src="img/1.jpg"> 
                     <div class="caption center-align">
                         <h3>This is our big Tagline!</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img src=img/2.jpg> <!-- random image -->
+                    <img src=img/2.jpg> 
                     <div class="caption left-align">
                         <h3>Left Aligned Caption</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img src="img/3.jpg"> <!-- random image -->
+                    <img src="img/3.jpg"> 
                     <div class="caption right-align">
                         <h3>Right Aligned Caption</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img src="img/4.jpg"> <!-- random image -->
+                    <img src="img/4.jpg"> 
+                    <div class="caption center-align">
+                        <h3>This is our big Tagline!</h3>
+                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    </div>
+                </li>
+                <li>
+                    <img src="img/5.jpg"> 
+                    <div class="caption center-align">
+                        <h3>This is our big Tagline!</h3>
+                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    </div>
+                </li>
+                <li>
+                    <img src="img/6.jpg"> 
+                    <div class="caption center-align">
+                        <h3>This is our big Tagline!</h3>
+                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    </div>
+                </li>
+                <li>
+                    <img src="img/7.jpg"> 
                     <div class="caption center-align">
                         <h3>This is our big Tagline!</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -66,18 +87,16 @@
 
 
 
-
-        <!-- <footer class="page-footer orange">
-<div class="container">
-</div>
+        <!--
+<footer class="page-footer orange">
 <div class="footer-copyright">
 <div class="container">
 Made by <a class="orange-text text-lighten-3" href="http://github.com/vishnupoothery">Vishnu Poothery</a>
 </div>
 </div>
 </footer>
-
 -->
+
         <!--  Scripts-->
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="js/materialize.js"></script>
