--- a/index.html
+++ b/index.html
@@ -27,49 +27,49 @@
         <div class="slider">
             <ul class="slides">
                 <li>
-                    <img src="img/1.jpg"> 
+                    <img class="responsive-img" src="img/1.jpg"> 
                     <div class="caption center-align">
                         <h3>This is our big Tagline!</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img src=img/2.jpg> 
+                    <img class="responsive-img" src=img/2.jpg> 
                     <div class="caption left-align">
                         <h3>Left Aligned Caption</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img src="img/3.jpg"> 
+                    <img class="responsive-img" src="img/3.jpg"> 
                     <div class="caption right-align">
                         <h3>Right Aligned Caption</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img src="img/4.jpg"> 
+                    <img class="responsive-img" src="img/4.jpg"> 
                     <div class="caption center-align">
                         <h3>This is our big Tagline!</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img src="img/5.jpg"> 
+                    <img class="responsive-img" src="img/5.jpg"> 
                     <div class="caption center-align">
                         <h3>This is our big Tagline!</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img src="img/6.jpg"> 
+                    <img class="responsive-img" src="img/6.jpg"> 
                     <div class="caption center-align">
                         <h3>This is our big Tagline!</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
                 <li>
-                    <img src="img/7.jpg"> 
+                    <img class="responsive-img" src="img/7.jpg"> 
                     <div class="caption center-align">
                         <h3>This is our big Tagline!</h3>
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
