--- a/index.html
+++ b/index.html
@@ -80,8 +80,50 @@
 
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
-
-
+                <div class="row">
+                    <div class="col s12 m4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="img/3.jpg">
+                                <span class="card-title">Card Title</span>
+                            </div>
+                            <div class="card-content">
+                                <p>Short Description</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#">Show more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="img/1.jpg">
+                                <span class="card-title">Card Title</span>
+                            </div>
+                            <div class="card-content">
+                                <p>Short Description</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#">Show more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="img/2.jpg">
+                                <span class="card-title">Card Title</span>
+                            </div>
+                            <div class="card-content">
+                                <p>Short Description</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#">Show more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
