--- a/index.html
+++ b/index.html
@@ -78,11 +78,39 @@
             </ul>
         </div>
 
+        <div class="container">
+            <div class="row">
+                <div class="col s6 m4 l3">
+                    <div class="card-panel light-blue lighten-1 hoverable">
+                        <span class="white-text">Category 1
+                        </span>
+                    </div>
+                </div>
+                <div class="col s6 m4 l3">
+                    <div class="card-panel light-blue lighten-1 hoverable">
+                        <span class="white-text">Category 2
+                        </span>
+                    </div>
+                </div>
+                <div class="col s6 m4 l3">
+                    <div class="card-panel light-blue lighten-1 hoverable">
+                        <span class="white-text">Category 3
+                        </span>
+                    </div>
+                </div>
+                <div class="col s6 m4 l3">
+                    <div class="card-panel light-blue lighten-1 hoverable">
+                        <span class="white-text">Category 4
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
                 <div class="row">
-                    <div class="col s12 m4">
-                        <div class="card">
+                    <div class="col s12 m6 l4">
+                        <div class="card  hoverable">
                             <div class="card-image">
                                 <img src="img/3.jpg">
                                 <span class="card-title">Card Title</span>
@@ -95,8 +123,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col s12 m4">
-                        <div class="card">
+                    <div class="col s12 m6 l4">
+                        <div class="card  hoverable">
                             <div class="card-image">
                                 <img src="img/1.jpg">
                                 <span class="card-title">Card Title</span>
@@ -109,8 +137,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col s12 m4">
-                        <div class="card">
+                    <div class="col s12 m6 l4">
+                        <div class="card  hoverable">
                             <div class="card-image">
                                 <img src="img/2.jpg">
                                 <span class="card-title">Card Title</span>
