--- a/index.html
+++ b/index.html
@@ -81,25 +81,25 @@
         <div class="container">
             <div class="row">
                 <div class="col s6 m4 l3">
-                    <div class="card-panel light-blue lighten-1 hoverable">
+                    <div class="card-panel light-blue lighten-1 z-depth-4">
                         <span class="white-text">Category 1
                         </span>
                     </div>
                 </div>
                 <div class="col s6 m4 l3">
-                    <div class="card-panel light-blue lighten-1 hoverable">
+                    <div class="card-panel light-blue lighten-1 z-depth-4">
                         <span class="white-text">Category 2
                         </span>
                     </div>
                 </div>
                 <div class="col s6 m4 l3">
-                    <div class="card-panel light-blue lighten-1 hoverable">
+                    <div class="card-panel light-blue lighten-1 z-depth-4">
                         <span class="white-text">Category 3
                         </span>
                     </div>
                 </div>
                 <div class="col s6 m4 l3">
-                    <div class="card-panel light-blue lighten-1 hoverable">
+                    <div class="card-panel light-blue lighten-1 z-depth-4">
                         <span class="white-text">Category 4
                         </span>
                     </div>
@@ -110,7 +110,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col s12 m6 l4">
-                        <div class="card  hoverable">
+                        <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/3.jpg">
                                 <span class="card-title">Card Title</span>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="col s12 m6 l4">
-                        <div class="card  hoverable">
+                        <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/1.jpg">
                                 <span class="card-title">Card Title</span>
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="col s12 m6 l4">
-                        <div class="card  hoverable">
+                        <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/2.jpg">
                                 <span class="card-title">Card Title</span>
