--- a/index.html
+++ b/index.html
@@ -54,27 +54,6 @@
                         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
                     </div>
                 </li>
-                <li>
-                    <img class="responsive-img" src="img/5.jpg"> 
-                    <div class="caption center-align">
-                        <h3>This is our big Tagline!</h3>
-                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-                    </div>
-                </li>
-                <li>
-                    <img class="responsive-img" src="img/6.jpg"> 
-                    <div class="caption center-align">
-                        <h3>This is our big Tagline!</h3>
-                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-                    </div>
-                </li>
-                <li>
-                    <img class="responsive-img" src="img/7.jpg"> 
-                    <div class="caption center-align">
-                        <h3>This is our big Tagline!</h3>
-                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-                    </div>
-                </li>
             </ul>
         </div>
 
@@ -119,7 +98,7 @@
                                 <p>Short Description</p>
                             </div>
                             <div class="card-action">
-                                <a href="#">Show more</a>
+                                <a href="parallax.html">Show more</a>
                             </div>
                         </div>
                     </div>
@@ -133,7 +112,7 @@
                                 <p>Short Description</p>
                             </div>
                             <div class="card-action">
-                                <a href="#">Show more</a>
+                                <a href="parallax.html">Show more</a>
                             </div>
                         </div>
                     </div>
@@ -147,7 +126,7 @@
                                 <p>Short Description</p>
                             </div>
                             <div class="card-action">
-                                <a href="#">Show more</a>
+                                <a href="parallax.html">Show more</a>
                             </div>
                         </div>
                     </div>
