--- a/parallax.html
+++ b/parallax.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-            <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+            <div class="parallax"><img src="img/2.jpg" alt="Unsplashed background img 2"></div>
         </div>
 
         <div class="container">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
             </div>
-            <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+            <div class="parallax"><img src="img/3.jpg" alt="Unsplashed background img 3"></div>
         </div>
 
         <footer class="page-footer teal">
