--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
         <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     </head>
     <body>
-        <nav class="light-blue lighten-1" role="navigation">
-            <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Fernweh</a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="#">About</a></li>
-                </ul>
-
-                <ul id="nav-mobile" class="side-nav">
-                    <li><a href="#">About</a></li>
-                </ul>
-                <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-            </div>
-        </nav>
+        <div class="navbar-fixed">
+            <nav class="white" role="navigation">
+                <div class="nav-wrapper container">
+                    <a href="#!" class="brand-logo"><img class="responsive-img" src="img/logo_transparent.png"></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="sass.html">Sass</a></li>
+                        <li><a href="badges.html">Components</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
 
         <div class="slider">
             <ul class="slides">
@@ -57,76 +56,67 @@
             </ul>
         </div>
 
-        <div class="container">
-            <div class="row">
-                <div class="col s6 m4 l3">
-                    <div class="card-panel light-blue lighten-1 z-depth-4">
-                        <span class="white-text">Category 1
-                        </span>
-                    </div>
-                </div>
-                <div class="col s6 m4 l3">
-                    <div class="card-panel light-blue lighten-1 z-depth-4">
-                        <span class="white-text">Category 2
-                        </span>
-                    </div>
-                </div>
-                <div class="col s6 m4 l3">
-                    <div class="card-panel light-blue lighten-1 z-depth-4">
-                        <span class="white-text">Category 3
-                        </span>
-                    </div>
-                </div>
-                <div class="col s6 m4 l3">
-                    <div class="card-panel light-blue lighten-1 z-depth-4">
-                        <span class="white-text">Category 4
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
+                <h5 class="uppercase"><strong>Fernweh Destinations</strong></h5>
                 <div class="row">
-                    <div class="col s12 m6 l4">
+                    <div class="col s6 m3 l2">
                         <div class="card  z-depth-4">
                             <div class="card-image">
-                                <img src="img/3.jpg">
-                                <span class="card-title">Card Title</span>
+                                <img src="img/d_manali.jpg">
                             </div>
                             <div class="card-content">
-                                <p>Short Description</p>
-                            </div>
-                            <div class="card-action">
-                                <a href="parallax.html">Show more</a>
+                                <p>MANALI</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col s12 m6 l4">
+                    <div class="col s6 m3 l2">
                         <div class="card  z-depth-4">
                             <div class="card-image">
-                                <img src="img/1.jpg">
-                                <span class="card-title">Card Title</span>
+                                <img src="img/d_agra.jpg">
                             </div>
                             <div class="card-content">
-                                <p>Short Description</p>
-                            </div>
-                            <div class="card-action">
-                                <a href="parallax.html">Show more</a>
+                                <p>AGRA</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col s12 m6 l4">
+                    <div class="col s6 m3 l2">
                         <div class="card  z-depth-4">
                             <div class="card-image">
-                                <img src="img/2.jpg">
-                                <span class="card-title">Card Title</span>
+                                <img src="img/d_alappuzha.jpg">
                             </div>
                             <div class="card-content">
-                                <p>Short Description</p>
+                                <p>ALAPPUZHA</p>
                             </div>
-                            <div class="card-action">
-                                <a href="parallax.html">Show more</a>
+                        </div>
+                    </div>
+                    <div class="col s6 m3 l2">
+                        <div class="card  z-depth-4">
+                            <div class="card-image">
+                                <img src="img/d_coorg.jpg">
+                            </div>
+                            <div class="card-content">
+                                <p>COORG</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s6 m3 l2">
+                        <div class="card  z-depth-4">
+                            <div class="card-image">
+                                <img src="img/d_jaisalmer.jpg">
+                            </div>
+                            <div class="card-content">
+                                <p>JAISALMER</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s6 m3 l2">
+                        <div class="card  z-depth-4">
+                            <div class="card-image">
+                                <img src="img/d_mysore.jpg">
+                            </div>
+                            <div class="card-content">
+                                <p>MYSORE</p>
                             </div>
                         </div>
                     </div>
