added view more dead link'

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col s6 m3 l2">
+                    <div class="col s6 m3 l2 show-on-large">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/d_jaisalmer.jpg">
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col s6 m3 l2">
+                    <div class="col s6 m3 l2 show-on-large">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/d_mysore.jpg">
@@ -120,7 +120,11 @@
                             </div>
                         </div>
                     </div>
+                    <div class=" col s12 m12 l12 right-align">
+                    <a href="#">view more</a>
                 </div>
+                </div>
+
             </div>
         </div>
 
