--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col s6 m3 l2 show-on-large">
+                    <div class="col s6 m3 l2 hide-on-med-and-down">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/d_jaisalmer.jpg">
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col s6 m3 l2 show-on-large">
+                    <div class="col s6 m3 l2 hide-on-med-and-down">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/d_mysore.jpg">
