--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
-                <h5 class="uppercase"><strong>Fernweh Destinations</strong></h5>
+                <h5 class="uppercase"><strong>FERNWEH DESTINATIONS</strong></h5>
                 <div class="row">
                     <div class="col s6 m3 l2">
                         <div class="card  z-depth-4">
@@ -121,10 +121,54 @@
                         </div>
                     </div>
                     <div class=" col s12 m12 l12 right-align">
-                    <a href="#">view more</a>
+                        <a href="#">view more</a>
+                    </div>
                 </div>
-                </div>
+            </div>
 
+            <div class="container">
+                <h5 class="uppercase"><strong>FERNWEH ESCAPE</strong></h5>
+                <div class="row">
+                    <div class="col s12 m4 l4">
+                        <div class="card  z-depth-4">
+                            <div class="card-image">
+                                <img src="img/e_agra.jpg">
+                            </div>
+                            <div class="card-content">
+                                <p>Category</p><br>
+                                <h6><strong>Taj Mahal</strong></h6><br>
+                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m4 l4">
+                        <div class="card  z-depth-4">
+                            <div class="card-image">
+                                <img src="img/e_agra.jpg">
+                            </div>
+                            <div class="card-content">
+                                <p>Category</p><br>
+                                <h6><strong>Taj Mahal</strong></h6><br>
+                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m4 l4 hide-on-small-only">
+                        <div class="card  z-depth-4">
+                            <div class="card-image">
+                                <img src="img/e_agra.jpg">
+                            </div>
+                            <div class="card-content">
+                                <p>Category</p><br>
+                                <h6><strong>Taj Mahal</strong></h6><br>
+                                <a class="waves-effect waves-light btn red accent-4">EXPLORE <i class="material-icons right">send</i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" col s12 m12 l12 right-align">
+                        <a href="#">view more</a>
+                    </div>
+                </div>
             </div>
         </div>
 
