--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col s12 m4 l4">
+                    <div class="col s12 m4 l4 hide-on-small-only">
                         <div class="card  z-depth-4">
                             <div class="card-image">
                                 <img src="img/e_agra.jpg">
