--- a/index.html
+++ b/index.html
@@ -22,16 +22,37 @@
                 </div>
             </nav>
         </div>
-
-
-        <div class="carousel carousel-slider" data-indicators="true">
-            <div class="carousel-fixed-item center">
-                <a class="btn waves-effect white grey-text darken-text-2">button</a>
-            </div>
-            <a class="carousel-item" href="#one!"><img src="img/1.jpg"></a>
-            <a class="carousel-item" href="#two!"><img src="img/2.jpg"></a>
-            <a class="carousel-item" href="#three!"><img src="img/3.jpg"></a>
-            <a class="carousel-item" href="#four!"><img src="img/4.jpg"></a>
+        <div class="slider">
+            <ul class="slides">
+                <li>
+                    <img class="responsive-img" src="img/1.jpg"> 
+                    <div class="caption center-align">
+                        <h3>This is our big Tagline!</h3>
+                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    </div>
+                </li>
+                <li>
+                    <img class="responsive-img" src=img/2.jpg> 
+                    <div class="caption left-align">
+                        <h3>Left Aligned Caption</h3>
+                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    </div>
+                </li>
+                <li>
+                    <img class="responsive-img" src="img/3.jpg"> 
+                    <div class="caption right-align">
+                        <h3>Right Aligned Caption</h3>
+                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    </div>
+                </li>
+                <li>
+                    <img class="responsive-img" src="img/4.jpg"> 
+                    <div class="caption center-align">
+                        <h3>This is our big Tagline!</h3>
+                        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                    </div>
+                </li>
+            </ul>
         </div>
 
         <div class="section no-pad-bot" id="index-banner">
@@ -170,7 +191,6 @@ Made by <a class="orange-text text-lighten-3" href="http://github.com/vishnupoot
             $(document).ready(function(){
                 $('.slider').slider();
             });
-            $('.carousel.carousel-slider').carousel({fullWidth: true});
         </script>
 
     </body>
