--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
                 <div class="nav-wrapper container">
                     <a href="#!" class="brand-logo"><img class="responsive-img" src="img/logo_transparent.png"></a>
                     <ul class="right hide-on-med-and-down">
-                        <li><a href="sass.html">Sass</a></li>
-                        <li><a href="badges.html">Components</a></li>
+                        <li><a href="badges.html">About</a></li>
                     </ul>
                 </div>
             </nav>
