--- a/destinations.html
+++ b/destinations.html
@@ -7,6 +7,7 @@
 
         <!-- CSS  -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
         <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
         <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     </head>
@@ -22,14 +23,19 @@
             </nav>
         </div>
 
-        <div class="carousel carousel-slider" data-indicators="true">
-            <a class="carousel-item" href="#one!"><img src="img/1.jpg"></a>
-            <a class="carousel-item" href="#two!"><img src="img/2.jpg"></a>
-            <a class="carousel-item" href="#three!"><img src="img/3.jpg"></a>
-            <a class="carousel-item" href="#four!"><img src="img/4.jpg"></a>
-        </div>
 
+        <div class="w3-display-container">
+            <img class="responsive-img" src="img/destination_hero.jpg">
+            <div class="w3-display-middle w3-large"><h1 class="white-text"><strong>Fernweh Destinations</strong></h1></div>
+        </div> 
 
+        <!--    <div class="carousel carousel-slider" data-indicators="true">
+<a class="carousel-item" href="#one!"><img src="img/1.jpg"></a>
+<a class="carousel-item" href="#two!"><img src="img/2.jpg"></a>
+<a class="carousel-item" href="#three!"><img src="img/3.jpg"></a>
+<a class="carousel-item" href="#four!"><img src="img/4.jpg"></a>
+</div>
+-->
 
 
         <!--
