corrected hero title

--- a/destinations.html
+++ b/destinations.html
@@ -26,7 +26,8 @@
 
         <div class="w3-display-container">
             <img class="responsive-img" src="img/destination_hero.jpg">
-            <div class="w3-display-middle w3-large"><h1 class="white-text"><strong>Fernweh Destinations</strong></h1></div>
+            <div class="w3-display-middle w3-large"><h1 class="white-text hide-on-small-only"><strong>Fernweh Destinations</strong></h1>
+            <h3 class="white-text hide-on-med-and-up center"><strong>Fernweh Destinations</strong></h3></div>
         </div> 
 
         <!--    <div class="carousel carousel-slider" data-indicators="true">
