--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class=" col s12 m12 l12 right-align">
-                        <a href="#">view more</a>
+                        <a href="destinations.html">view more</a>
                     </div>
                 </div>
             </div>
