corrected destinations lading page

--- a/destinations.html
+++ b/destinations.html
@@ -25,9 +25,10 @@
 
 
         <div class="w3-display-container">
-            <img class="responsive-img" src="img/destination_hero.jpg">
+            <img class="responsive-img hide-on-small-only z-depth-4" src="img/destination_hero.jpg">
+            <img class="responsive-img hide-on-med-and-up z-depth-4" src="img/destination_hero_m.jpg">
             <div class="w3-display-middle w3-large"><h1 class="white-text hide-on-small-only"><strong>Fernweh Destinations</strong></h1>
-                <h3 class="white-text hide-on-med-and-up center z-depth-4"><strong>Fernweh Destinations</strong></h3></div>
+                <h3 class="white-text hide-on-med-and-up center"><strong>Fernweh Destinations</strong></h3></div>
         </div> 
         <br>
         <div class="container">
