--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar-fixed">
             <nav class="white" role="navigation">
                 <div class="nav-wrapper container">
-                    <a href="#!" class="brand-logo"><img class="responsive-img" src="img/logo_transparent.png"></a>
+                    <a href="index.html" class="brand-logo"><img class="responsive-img" src="img/logo_transparent.png"></a>
                     <ul class="right hide-on-med-and-down">
                         <li><a href="badges.html">About</a></li>
                     </ul>
