--- a/pages/jaisalmer.html
+++ b/pages/jaisalmer.html
@@ -33,57 +33,63 @@
         </div> 
         <br>
         <div class="container">
-            <h4><bold>DESCRIPTION</bold></h4>
-            <div class="row">
-                <div class="col l9 m9 s12 z-depth-3" style="padding-bottom: 2px">
-                    <p>The Jewel of Rajasthan, Jaisalmer, packs everything Rajasthan represents- Forts, sand dunes, desert safari, and the spicy Rajasthani food. When in town, take a desert Safari and spend a night in the desert. Back in the city, you would travel through narrow lanes with Havelis and tiny houses coexisting with each other in harmony. Almost the whole city is carved out of the Golden-Honey Sandstone as the Fort and lends the name Golden City to Jaisalmer. </p>
-                    <div class="col l6 m6 s6">&#8377; 1500</div>
-                    <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
-                    <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 2 Days</div>
-                    <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
-
-                </div>
-            </div>
-            <h4><strong>ITINERARY</strong></h4>
-            <div class="row">
-                <div class="col l9 m9 s12 z-depth-3">
-                    <p>We leave for desert which is around 40 km from hotel post Lunch. After reaching the spot you will spend some time with your camel over there, to become friend with your companion for the next 18 hours. Afterwards we will start our journey to the Sunset point. Enjoy the beautiful view of desert in the evening and after sunset there will be tea, snacks, bonfire and dinner. We spend the night sleeping under the stars. Mattresses & quilt will be provided by hotel. In the morning post breakfast we again head out for camel safari and after that we head back to hotel.</p>
-                </div>
-            </div>
-            <h4><bold>INCLUSIONS</bold></h4>
-            <div class="row">
-                <ul class="col l9 m9 s12 z-depth-3 collection">
-                    <li class="collection-item">Transportation to and from hotel.</li>
-                    <li class="collection-item">Tea/Coffee and Snacks, Lunch, Dinner and Breakfast.</li>
-                    <li class="collection-item">Camel Safari</li>
-                    <li class="collection-item">Mattresses, linen and pillow</li>
-                    <li class="collection-item">Water</li>
-                    <li class="collection-item">Open Toilet</li>
-                </ul>
-            </div>
-            <h4><bold>CONTACT FORM</bold></h4>
-            <div class="row">
-                <div class="col l9 m9 s12 z-depth-3" style="padding-bottom: 5px">
-                    <form action="POST">
-                        <input type="text" id="name" placeholder="Enter your name">
-                        <input type="text" id="number" placeholder="Enter your contact number">
-                        <input type="text" id="email" placeholder="Enter your email address">
-                        <input type="hidden" id="dest" value="jaisalmer">
-                        <input class="waves-effect waves-light btn" type="submit" value="SUBMIT">
-                    </form>
-                </div>
-            </div>
-            <h4><bold>POLICIES</bold></h4>
-            <div class="row">
-                <ul class="col l9 m9 s12 z-depth-3 collection">
-                    <li class="collection-item">According to government regulations, a valid Photo ID has to be carried by every person above the age of 18 staying at the hotel. The identification proofs accepted are Drivers License, Voters Card, Passport, Ration Card. Without valid ID the guest will not be allowed to check in. Note- PAN Cards will not be accepted as a valid ID card</li>
-                    <li class="collection-item">Personal expenses such as laundry, telephone calls, room service, alcoholic beverages, mini bar etc., are not included</li>
-                    <li class="collection-item">If payment is not made as per the schedule provided in the first booking confirmation e-mail, Fernweh reserves the right to cancel the booking after attempting to get in touch with you. Refunds would be as per the package cancellation policy</li>
-                    <li class="collection-item">Kindly be on time for your activities, tours and transfers. Most countries are quite strict about following a schedule</li>
-                </ul>
-            </div>
+            <div id="map" style="width:100%;height:400px;"></div>
         </div>
 
+        <div class="section no-pad-bot">
+            <div class="container">
+                <h4><bold>DESCRIPTION</bold></h4>
+                <div class="row">
+                    <div class="col l9 m9 s12 z-depth-3" style="padding-bottom: 2px">
+                        <p>The Jewel of Rajasthan, Jaisalmer, packs everything Rajasthan represents- Forts, sand dunes, desert safari, and the spicy Rajasthani food. When in town, take a desert Safari and spend a night in the desert. Back in the city, you would travel through narrow lanes with Havelis and tiny houses coexisting with each other in harmony. Almost the whole city is carved out of the Golden-Honey Sandstone as the Fort and lends the name Golden City to Jaisalmer. </p>
+                        <div class="col l6 m6 s6">&#8377; 1500</div>
+                        <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
+                        <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 2 Days</div>
+                        <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
+
+                    </div>
+                </div>
+                <h4><strong>ITINERARY</strong></h4>
+                <div class="row">
+                    <div class="col l9 m9 s12 z-depth-3">
+                        <p>We leave for desert which is around 40 km from hotel post Lunch. After reaching the spot you will spend some time with your camel over there, to become friend with your companion for the next 18 hours. Afterwards we will start our journey to the Sunset point. Enjoy the beautiful view of desert in the evening and after sunset there will be tea, snacks, bonfire and dinner. We spend the night sleeping under the stars. Mattresses & quilt will be provided by hotel. In the morning post breakfast we again head out for camel safari and after that we head back to hotel.</p>
+                    </div>
+                </div>
+                <h4><bold>INCLUSIONS</bold></h4>
+                <div class="row">
+                    <ul class="col l9 m9 s12 z-depth-3 collection">
+                        <li class="collection-item">Transportation to and from hotel.</li>
+                        <li class="collection-item">Tea/Coffee and Snacks, Lunch, Dinner and Breakfast.</li>
+                        <li class="collection-item">Camel Safari</li>
+                        <li class="collection-item">Mattresses, linen and pillow</li>
+                        <li class="collection-item">Water</li>
+                        <li class="collection-item">Open Toilet</li>
+                    </ul>
+                </div>
+                <h4><bold>CONTACT FORM</bold></h4>
+                <div class="row">
+                    <div class="col l9 m9 s12 z-depth-3" style="padding-bottom: 5px">
+                        <form method="post" action="#">
+                            <input type="text" id="name" placeholder="Enter your name">
+                            <input type="text" id="number" placeholder="Enter your contact number">
+                            <input type="email" id="email" placeholder="Enter your email address">
+                            <input type="hidden" id="dest" value="jaisalmer">
+
+                            <input class="waves-effect waves-light btn" type="submit" value="SUBMIT">
+                        </form>
+                    </div>
+                </div>
+                <h4><bold>POLICIES</bold></h4>
+                <div class="row">
+                    <ul class="col l9 m9 s12 z-depth-3 collection">
+                        <li class="collection-item">According to government regulations, a valid Photo ID has to be carried by every person above the age of 18 staying at the hotel. The identification proofs accepted are Drivers License, Voters Card, Passport, Ration Card. Without valid ID the guest will not be allowed to check in. Note- PAN Cards will not be accepted as a valid ID card</li>
+                        <li class="collection-item">Personal expenses such as laundry, telephone calls, room service, alcoholic beverages, mini bar etc., are not included</li>
+                        <li class="collection-item">If payment is not made as per the schedule provided in the first booking confirmation e-mail, Fernweh reserves the right to cancel the booking after attempting to get in touch with you. Refunds would be as per the package cancellation policy</li>
+                        <li class="collection-item">Kindly be on time for your activities, tours and transfers. Most countries are quite strict about following a schedule</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
 
 
@@ -104,6 +110,18 @@ Made by <a class="orange-text text-lighten-3" href="http://github.com/vishnupoot
         <script>
             $('.carousel.carousel-slider').carousel({fullWidth: true});
         </script>
+
+        <script>
+            function myMap() {
+                var mapOptions = {
+                    center: new google.maps.LatLng(26.9157, 70.9083),
+                    zoom: 10,
+                    mapTypeId: google.maps.MapTypeId.ROADMAP
+                }
+                var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+            }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script> 
 
     </body>
 </html>
