--- a/pages/allapuzha.html
+++ b/pages/allapuzha.html
@@ -26,10 +26,10 @@
         </div>
 
         <div class="w3-display-container">
-            <img class="responsive-img hide-on-small-only z-depth-4" src="../img/destination_hero/hero_jaisalmer.jpg">
-            <img class="responsive-img hide-on-med-and-up z-depth-4" src="../img/destination_hero/m_hero_jaisalmer.jpg">
-            <div class="w3-display-middle w3-large"><h1 class="white-text hide-on-small-only"><strong>JAISALMER</strong></h1>
-                <h3 class="white-text hide-on-med-and-up center"><strong>JAISALMER</strong></h3></div>
+            <img class="responsive-img hide-on-small-only z-depth-4" src="../img/destination_hero/hero_allapuzha.jpg">
+            <img class="responsive-img hide-on-med-and-up z-depth-4" src="../img/destination_hero/m_hero_allapuzha.jpg">
+            <div class="w3-display-middle w3-large"><h1 class="white-text hide-on-small-only"><strong>ALLAPUZHA</strong></h1>
+                <h3 class="white-text hide-on-med-and-up center"><strong>ALLAPUZHA</strong></h3></div>
         </div> 
         <br>
         <div class="container">
@@ -41,10 +41,10 @@
                 <h4><bold>DESCRIPTION</bold></h4>
                 <div class="row">
                     <div class="col l9 m9 s12 z-depth-3" style="padding-bottom: 2px">
-                        <p>The Jewel of Rajasthan, Jaisalmer, packs everything Rajasthan represents- Forts, sand dunes, desert safari, and the spicy Rajasthani food. When in town, take a desert Safari and spend a night in the desert. Back in the city, you would travel through narrow lanes with Havelis and tiny houses coexisting with each other in harmony. Almost the whole city is carved out of the Golden-Honey Sandstone as the Fort and lends the name Golden City to Jaisalmer. </p>
+                        <p>Kerala is synonymous with backwaters as the backwaters are with Alleppey. Alleppey is famous for its vast network of waterways and hence is also called the ‘Venice of the East’. But apart from its grid of canals and backwaters, Alleppey is also known for its fresh greenery, tiny villages, and coddy shops.  </p>
                         <div class="col l6 m6 s6">&#8377; 1500</div>
                         <div class="col l6 m6 s6"><i class="tiny material-icons">star</i> 4.8</div>
-                        <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 2 Days</div>
+                        <div class="col l6 m6 s6"><i class="tiny material-icons">access_time</i> 3 Days</div>
                         <div class="col l6 m6 s6"><i class="tiny material-icons">message</i> 5 Review</div>
 
                     </div>
@@ -52,7 +52,18 @@
                 <h4><strong>ITINERARY</strong></h4>
                 <div class="row">
                     <div class="col l9 m9 s12 z-depth-3">
-                        <p>We leave for desert which is around 40 km from hotel post Lunch. After reaching the spot you will spend some time with your camel over there, to become friend with your companion for the next 18 hours. Afterwards we will start our journey to the Sunset point. Enjoy the beautiful view of desert in the evening and after sunset there will be tea, snacks, bonfire and dinner. We spend the night sleeping under the stars. Mattresses & quilt will be provided by hotel. In the morning post breakfast we again head out for camel safari and after that we head back to hotel.</p>
+                        <h5>DAY 1</h5>
+                        <p>
+                            Upon your arrival at Kochi airport or the railway station, you will be welcomed by our representative. Proceed to the next destination on your itinerary while enjoying the scenic routes filled with lush palm trees and the natural beauty of “God’s own country.” Complete check-in formalities at the hotel in Alleppey, and get over the fatigue from your journey by enjoying a refreshing overnight stay at the hotel.
+                        </p>
+                        <h5>DAY 2</h5>
+                        <p>
+                            Alleppey: Houseboat cruise
+                        </p>
+                        <h5>DAY 3</h5>
+                        <p>
+                            trip ends with sightseeing in kumarakom and drop off at airport
+                        </p>
                     </div>
                 </div>
                 <h4><bold>INCLUSIONS</bold></h4>
@@ -73,7 +84,7 @@
                             <input type="text" id="name" placeholder="Enter your name">
                             <input type="text" id="number" placeholder="Enter your contact number">
                             <input type="email" id="email" placeholder="Enter your email address">
-                            <input type="hidden" id="dest" value="jaisalmer">
+                            <input type="hidden" id="dest" value="allapuzha">
 
                             <input class="waves-effect waves-light btn" type="submit" value="SUBMIT">
                         </form>
